welcome.lessons.welcome.array.island.Island.scala.error
island:7: error: identifier expected but 'var' found.
def level(num:Array[Int],var niveau:Int,x:Int):Int ={
                         ^island:17: error: ':' expected but '}' found.
 }
 ^