welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  return level(num,0,1)
}
  
  
  
def level(num:Array[Int],var niveau:Int,x:Int):Int ={
  if (x==num.length){
    return niveau
  }
  else
  if (num(x)>num(x-1)){
    niveau=niveau+1
  }
  return level(num,niveau,x+1)
}